--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
   <main class="flex-grow-1 text-white">
     <div class="container">
       <!--BANNER INDEX-->
-      <div id="banner" class="container d-flex flex-column justify-content-between rounded-3">
+      <div id="banner" class="container d-flex flex-column justify-content-between rounded-3 my-1">
         <div class="container">
           <h1 id="titulo_principal" class="text-center p-4">BodyMindFit</h1>
         </div>
@@ -163,7 +163,7 @@
   <!--FIN DE MAIN-->
   <!--INICIO DEL FOOTER-->
   <footer>
-    <div class="container-fluid bg-secondary bg-gradient bg-opacity-75 mt-21 p-3">
+    <div class="container-fluid bg-secondary bg-gradient bg-opacity-75 mt-1 p-3">
       <div class="row align-items-center">
         <div class="col d-flex justify-content-center">
           <a class="text-reset" href="#">Aviso legal</a>
