--- a/index.html
+++ b/index.html
@@ -166,10 +166,10 @@
     <div class="container-fluid bg-secondary bg-gradient bg-opacity-75 mt-1 p-3">
       <div class="row align-items-center">
         <div class="col d-flex justify-content-center">
-          <a class="text-reset" href="#">Aviso legal</a>
+          <a class="text-reset efecto_subrayado" href="#">Aviso legal</a>
         </div>
         <div class="col d-flex justify-content-center">
-          <a class="text-reset" href="#">Copyright 2023</a>
+          <a class="text-reset efecto_subrayado" href="#">Copyright 2023</a>
         </div>
         <!--REDES-->
         <div class="col d-flex justify-content-center fs-3 ">
