--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Bienvenido a BodyMindFit, tu destino para descubrir un estilo de vida activo y saludable que transformará tanto tu cuerpo como tu mente">
-  <meta name="keywords"  content="fitness, entrenamiento, estilo de vida saludable, alimentacion">
+  <meta name="description"
+    content="Bienvenido a BodyMindFit, tu destino para descubrir un estilo de vida activo y saludable que transformará tanto tu cuerpo como tu mente">
+  <meta name="keywords" content="fitness, entrenamiento, estilo de vida saludable, alimentacion">
   <title>BodyMindFit - Bienvenido</title>
   <!--BOOTSTRAP-->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
