--- a/pages/videos.html
+++ b/pages/videos.html
@@ -4,8 +4,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="Bienvenido a BodyMindFit, tu destino para descubrir un estilo de vida activo y saludable que transformará tanto tu cuerpo como tu mente">
-  <meta name="keywords"  content="fitness, entrenamiento, estilo de vida saludable, alimentacion">
+  <meta name="description"
+    content="Bienvenido a BodyMindFit, tu destino para descubrir un estilo de vida activo y saludable que transformará tanto tu cuerpo como tu mente">
+  <meta name="keywords" content="fitness, entrenamiento, estilo de vida saludable, alimentacion">
   <title>BodyMindFit - Videos</title>
   <!--BOOTSTRAP-->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
@@ -64,7 +65,7 @@
     <div class="container">
       <!--TITULO-->
       <div
-        class="row bg-transparent border border-white border-3 rounded-pill text-white bg-body rounded mt-5 mb-5 shadow p-3 mb-5 bg-body rounded ">
+        class="row bg-transparent border border-white border-3 rounded-pill text-white bg-body rounded mt-5 mb-5 shadow p-3 mb-5 bg-body rounded titulo_secundario">
         <div class="col d-flex justify-content-center">
           <h1>¿Cómo lo hago?</h1>
         </div>
