--- a/index.html
+++ b/index.html
@@ -163,8 +163,8 @@
   </main>
   <!--FIN DE MAIN-->
   <!--INICIO DEL FOOTER-->
-  <footer>
-    <div class="container-fluid bg-secondary bg-gradient bg-opacity-75 mt-1 p-3">
+  <footer class="mt-3">
+    <div class="container-fluid p-3">
       <div class="row align-items-center">
         <div class="col d-flex justify-content-center">
           <a class="text-reset efecto_subrayado" href="#">Aviso legal</a>
