--- a/pages/blog.html
+++ b/pages/blog.html
@@ -75,7 +75,7 @@
         <article class="row bg-dark p-3 m-2 rounded-3">
           <div class="col-12 col-xl-6 align-self-center">
             <img src="../src/images/consejos_de_entrenamiento.jpg" alt="consejos de entrenamiento"
-              class="img-fluid rounded-3">
+              class="img-fluid rounded-3 flip-in-hor-bottom">
           </div>
           <div class="col-12 col-xl-6 p-4">
             <h2 class="text-decoration-underline">Consejos de entrenamientos</h2>
@@ -89,7 +89,7 @@
         <article class="row bg-dark p-2 m-2 rounded-3">
           <div class="col-12 col-xl-6 align-self-center">
             <img src="../src/images/historias_de_transformacion.jpg" alt="historias de transformacion"
-              class="img-fluid rounded-3">
+              class="img-fluid rounded-3 flip-in-hor-bottom">
           </div>
           <div class="col-12 col-xl-6 p-4">
             <h2 class="text-decoration-underline">Historias de transformación</h2>
@@ -103,7 +103,7 @@
         <article class="row bg-dark p-2 m-2 rounded-3">
           <div class="col-12 col-xl-6 align-self-center">
             <img src="../src/images/calculadora_de_calorias.jpg" alt="calculadora de calorias"
-              class="img-fluid rounded-3">
+              class="img-fluid rounded-3 flip-in-hor-bottom">
           </div>
           <div class="col-12 col-xl-6 p-4">
             <h2 class="text-decoration-underline">Calculadora de calorías</h2>
@@ -119,8 +119,8 @@
   </main>
   <!--FIN DE MAIN-->
   <!--INICIO DEL FOOTER-->
-  <footer>
-    <div class="container-fluid bg-secondary bg-gradient bg-opacity-75 mt-3 p-3">
+  <footer class="mt-3">
+    <div class="container-fluid p-3">
       <div class="row align-items-center">
         <div class="col d-flex justify-content-center">
           <a class="text-reset efecto_subrayado" href="#">Aviso legal</a>
