--- a/pages/blog.html
+++ b/pages/blog.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description"
-    content="Bienvenido a BodyMindFit, tu destino para descubrir un estilo de vida activo y saludable que transformará tanto tu cuerpo como tu mente">
-  <meta name="keywords" content="fitness, entrenamiento, estilo de vida saludable, alimentacion">
+    content="Blog - Descubre consejos esenciales para optimizar tu entrenamiento en el gimnasio. Sumérgete en inspiradoras historias de transformación física. Explora la importancia de usar una calculadora de calorías en tu viaje fitness.">
+  <meta name="keywords" content="historias de transformación, calculadora de calorias, consejos de entrenamientos">
   <title>BodyMindFit - Blog</title>
   <!--BOOTSTRAP-->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
