--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description"
-    content="Bienvenido a BodyMindFit, tu destino para descubrir un estilo de vida activo y saludable que transformará tanto tu cuerpo como tu mente">
-  <meta name="keywords" content="fitness, entrenamiento, estilo de vida saludable, alimentacion">
+    content="Contacto - Comparte tu viaje fitness y motiva a otros a alcanzar sus metas. Juntos, inspiramos y crecemos más fuertes.">
+  <meta name="keywords" content="formulario de contacto, compartir experiencias en el mundo fitness.">
   <title>BodyMindFit - Contacto</title>
   <!--BOOTSTRAP-->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
