--- a/pages/mapa.html
+++ b/pages/mapa.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description"
-    content="Bienvenido a BodyMindFit, tu destino para descubrir un estilo de vida activo y saludable que transformará tanto tu cuerpo como tu mente">
-  <meta name="keywords" content="fitness, entrenamiento, estilo de vida saludable, alimentacion">
+    content="Encuentra tu fuerza en nuestro gimnasio de musculación. Descubre el desafío definitivo en nuestro gimnasio de CrossFit. Explora un enfoque funcional en nuestro gimnasio.">
+  <meta name="keywords" content="musculación, crossfit, entrenamiento funcional.">
   <title>BodyMindFit - Ubicaciones</title>
   <!--BOOTSTRAP-->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
