--- a/pages/videos.html
+++ b/pages/videos.html
@@ -5,8 +5,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description"
-    content="Bienvenido a BodyMindFit, tu destino para descubrir un estilo de vida activo y saludable que transformará tanto tu cuerpo como tu mente">
-  <meta name="keywords" content="fitness, entrenamiento, estilo de vida saludable, alimentacion">
+    content="¡Eleva tu entrenamiento con nuestra rutina de gimnasio! Descubre el poder de una nutrición consciente con nuestro plan de alimentación para el gimnasio. Explora diferentes enfoques de entrenamiento con nuestra guía de tipos de ejercicios para el gimnasio.">
+  <meta name="keywords" content="rutina de ejercicios, planes de alimentación, tipos de entrenamientos.">
   <title>BodyMindFit - Videos</title>
   <!--BOOTSTRAP-->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
