--- a/pages/mapa.html
+++ b/pages/mapa.html
@@ -65,7 +65,7 @@
     <div class="container">
       <!--TITULO-->
       <div
-        class="row bg-transparent border border-white border-3 rounded-pill text-white bg-body rounded mt-5 mb-5 shadow p-3 mb-5 bg-body rounded titulo_secundario">
+        class="row bg-transparent border border-white border-3 rounded-pill text-white bg-body rounded mt-5 mb-5 shadow p-3 mb-5 bg-body rounded">
         <div class="col d-flex justify-content-center">
           <h1>Ubicaciones</h1>
         </div>
