--- a/pages/blog.html
+++ b/pages/blog.html
@@ -65,7 +65,7 @@
     <div class="container">
       <!--TITULO-->
       <div
-        class="row bg-transparent border border-white border-3 rounded-pill text-white bg-body rounded mt-5 mb-5 shadow p-3 mb-5 bg-body rounded titulo_secundario">
+        class="row bg-transparent border border-white border-3 rounded-pill text-white bg-body rounded mt-5 mb-5 shadow p-3 mb-5 bg-body rounded">
         <div class="col d-flex justify-content-center">
           <h1>Blog</h1>
         </div>
@@ -75,7 +75,7 @@
         <article class="row bg-dark p-3 m-2 rounded-3">
           <div class="col-12 col-xl-6 align-self-center">
             <img src="../src/images/consejos_de_entrenamiento.jpg" alt="consejos de entrenamiento"
-              class="img-fluid rounded-3 flip-in-hor-bottom">
+              class="img-fluid rounded-3 blog__img--animacion">
           </div>
           <div class="col-12 col-xl-6 p-4">
             <h2 class="text-decoration-underline">Consejos de entrenamientos</h2>
@@ -89,7 +89,7 @@
         <article class="row bg-dark p-2 m-2 rounded-3">
           <div class="col-12 col-xl-6 align-self-center">
             <img src="../src/images/historias_de_transformacion.jpg" alt="historias de transformacion"
-              class="img-fluid rounded-3 flip-in-hor-bottom">
+              class="img-fluid rounded-3 blog__img--animacion">
           </div>
           <div class="col-12 col-xl-6 p-4">
             <h2 class="text-decoration-underline">Historias de transformación</h2>
@@ -103,7 +103,7 @@
         <article class="row bg-dark p-2 m-2 rounded-3">
           <div class="col-12 col-xl-6 align-self-center">
             <img src="../src/images/calculadora_de_calorias.jpg" alt="calculadora de calorias"
-              class="img-fluid rounded-3 flip-in-hor-bottom">
+              class="img-fluid rounded-3 blog__img--animacion">
           </div>
           <div class="col-12 col-xl-6 p-4">
             <h2 class="text-decoration-underline">Calculadora de calorías</h2>
